--- a/home.css
+++ b/home.css
@@ -1,11 +1,11 @@
 /*------------------------------------------------------------------
 Main Stylesheet
 
-Project:    HighPoint - Multipurpose Business Template
+Project:    Upstake - Multipurpose Business Template
 Version:    1.0
-Last change:    02/04/2022
+Last change:    13/12/2024
 Author:    creativemaze
-Primary use:    Landing Page
+Primary use:   Landing Page
 -------------------------------------------------------------------*/
 
 /*------------------------------------------------------------------
@@ -84,34 +84,66 @@ ul{
 	}
 }
 
+.bg_head{
+	font-family: 'Montserrat' , Arial, sans-serif;
+	font-size: 40px;
+	font-weight: 600;
+	display: block;
+	color: #ffffff;
+	letter-spacing: 1px;
+	text-align: center;
+	line-height: 1.2em;
+	max-width: 600px;
+	margin-right: auto;
+	margin-left: auto;
+}
+
+.bg_info{
+	font-family: 'Roboto' , Arial, sans-serif;
+	font-size: 16px;
+	font-weight: normal;
+	display: block;
+	color: #dddddd;
+	letter-spacing: 1px;
+	text-align: center;
+	padding: 10px 10px 0;
+	line-height: 1.5em;
+	max-width: 600px;
+	margin: 0 auto;
+}
+
 /* 2. HEADER
  ----------- */
  
 /* --- 2.1. Logo & Navigation --- */
-nav.navbar.bootsnav .navbar-brand{
-    max-width: 200px; 	
-}
-
-.navbar-header a.navbar-brand{
+.navbar-header > a{
 	text-decoration: none;
-	color: #111111;
+	color: #f1f1f1;
 	transition: 0.5s;
 	font-family: 'Montserrat', Arial, sans-serif;
 	font-size: 22px;
 	font-weight: 700;
+	display: inline-block;
+	text-align: center;
 	letter-spacing: 1px;
 	text-transform: uppercase;
-	padding-top: 28px;
+	margin-top: 30px;
 }
 
-.navbar-header a.navbar-brand:hover{
-	color: #111111;
+.navbar-header > a:hover{
+	color: #f1f1f1;
 }
 
-nav.navbar .navbar-brand img.logo{
-   width: 100%;
+#nav-logo > a{
+	max-width: 160px; 
+	position: relative;
+	top: 33px;
+}
+
+#nav-logo > a img{
+   position: relative;
+   max-width: 160px;
    height: auto;
-   display: block;
 }
 
 nav.navbar.bootsnav{
@@ -122,6 +154,7 @@ nav.navbar.bootsnav{
 
 nav.navbar.bootsnav ul.nav{
 	margin-right: 160px;
+	margin-top: 5px;
 }
 
 nav.navbar.bootsnav li.dropdown ul.dropdown-menu{
@@ -131,7 +164,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu{
 }
 
 nav.navbar.bootsnav ul.nav > li > a{
-    color: #111111;
+    color: #ffffff;
     font-family: 'Montserrat' , Arial, sans-serif;
     font-size: 13px;
     font-weight: 700;
@@ -153,7 +186,7 @@ nav.navbar.bootsnav ul.navbar-right li.dropdown ul.dropdown-menu li a{
 }
 
 nav.navbar.bootsnav ul.navbar-right li.dropdown ul.dropdown-menu li a:hover{
-	color: #009FFF;
+	color: #f64f59;
 }
 
 nav.navbar.bootsnav li.dropdown ul.dropdown-menu{
@@ -196,14 +229,14 @@ nav.navbar.bootsnav ul.dropdown-menu.megamenu-content .content ul.menu-col li a{
 }
 
 nav.navbar.bootsnav ul.dropdown-menu.megamenu-content .content ul.menu-col li a:hover{
-	color: #009FFF;
+	color: #f64f59;
 }
 
 nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
     font-size: 14px;
     font-weight: 600;
 	font-family: 'Montserrat' , Arial, sans-serif;
-    color: #009FFF;
+    color: #f64f59;
     text-transform: uppercase;
 	letter-spacing: 1px;
 }
@@ -216,8 +249,8 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .attr-nav > ul > li > a{
-    color: #111111;
-	padding-top: 30px;
+    color: #ffffff;
+	padding-top: 36px;
 	margin-left: -12px;
 	position: relative;
 	left: -160px;
@@ -234,16 +267,14 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	max-width: 300px;
 	display: inline-block;
 	position: absolute;
-	top: 15px;
+	top: 19px;
 	right: 0;
 }
 
 .head_btn a{
-	background-color: #009FFF;
+	background-color: #1488cc;
 	width: 150px;
 	margin: 0 auto;
-	min-height: 30px;
-    border: none;
     color: #ffffff;
     padding: 13px 14px;
     text-decoration: none;
@@ -253,17 +284,15 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	font-weight: 600;
 	font-family: 'Montserrat', Arial sans-serif;
     transition: 0.5s;
-    cursor: pointer;
-	border: 1px solid #009FFF;
-	border-radius: 5px;
+	border: 1px solid #1488cc;
 	letter-spacing: 1px;
 	text-align: center;
 }
 
 .head_btn a:hover{
-	background-color: transparent;
-	color: #009FFF;
-	border: 1px solid #009FFF;
+	background-color: #ffffff;
+	color: #111111;
+	border: 1px solid #ffffff;
 }
 
 .sliderwrap{
@@ -272,19 +301,20 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .header__content{
+	position: relative;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	min-height: 600px;
 	height: 100vh;
+	min-height: 750px;
 }
 
 .slide__content{
 	position: relative;
 	z-index: 1;
 	height: 100vh;
-	min-height: 600px;
+	min-height: 750px;
 	text-align: center;
 	color: #ffffff;
 	background-size: cover;
@@ -292,39 +322,176 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	background-position: center;
 }
 
+.float_arc_dark{
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	left: 25px;
+	overflow: hidden;
+	width: 15px;
+	height: 15px;
+	background-color: #1488cc;
+	border-radius: 50%;
+	animation: diagonal-move-anim 3s linear infinite alternate;
+}
+
+@keyframes diagonal-move-anim {
+
+	0% {
+		transform: translate(0, 0);
+	}
+
+	100% {
+		transform: translate(50px, 50px);
+	}
+}
+
+.slide__left{
+	flex: 50%;
+	width: 50%;
+}
+
+.slide__right{
+	flex: 50%;
+	width: 50%;
+}
+
+.float_arc{
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	right: 25px;
+	overflow: hidden;
+	width: 15px;
+	height: 15px;
+	background-color: #d31027;
+	border-radius: 50%;
+	animation: right-diagonal-move-anim 3s linear infinite alternate;
+}
+
+@keyframes right-diagonal-move-anim{
+
+	0% {
+		transform: translate(-0, -0);
+	}
+
+	100% {
+		transform: translate(-50px, 50px);
+	}
+}
+
+.slide__content::before {
+	content: '';
+	position: absolute;
+	z-index: -1;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.8);
+}
+
 .header-title {
-	position: relative;
-	z-index: 99;
-	max-width: 1000px;
+	max-width: 900px;
 	display: block;
-	margin: auto;
+	margin: 0 auto;
 	padding: 0 10px;
 }
 
 .header-title__main{
 	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 45px;
-	font-weight: 700;
+	font-size: 40px;
+	font-weight: 800;
 	letter-spacing: 1px;
 	text-transform: uppercase;
 	text-align: center;
 	display: block;
-	color: #111111;
-	line-height: 1.4em;
+	color: #ffffff;
+	line-height: 1.2em;
+}
+
+.slidearea{
+	position: relative;
+	width: 100%;
+}
+
+.box_info{
+	position: absolute;
+	bottom: 0;
+	left: 50%;
+	margin-bottom: -90px;
+	margin-left: -90px;
+	transform: translateX(-50%);
+	z-index: 99;
+	width: 180px;
+	height: 180px;
+	display: block;
+	text-align: center;
+	background-color: #d31027;
+	border-radius: 50%;
+	box-shadow: 0 20px 70px rgba(38,42,76,.2);
+	animation: 3s infinite ease-in-out up-down;
+}
+
+@keyframes up-down{
+	0% {
+		transform: translatey(0px);
+	}
+	50% {
+		transform: translatey(-10px);
+	}
+	100% {
+		transform: translatey(0px);
+	}
+}
+
+.box_feature{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding: 12px;
+}
+
+.box_title{
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	min-height: auto;
+	border: double 4px #ffffff;
+	border-radius: 50%;
+}
+
+.box_title h3{
+	font-family: 'Montserrat' , Arial, sans-serif;
+	font-size: 20px;
+	font-weight: 700;
+	display: block;
+	color: #ffffff;
+	text-align: center;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	line-height: 1.3em;
+	margin: 0;
+}
+
+.num_head{
+	color: #009FFF;
 }
 
 .slide_word{
-	color: #ec2F4B;
+	color: #1488cc;
 }
 
 .buttoncol a{
-	background: transparent;
-	width: 150px;
-	margin: 20px auto 0;
-	min-height: 30px;
-    border: none;
-    color: #111111;
-    padding: 13px 14px;
+	background-color: transparent;
+	width: 140px;
+	margin: 30px auto 0;
+    color: #ffffff;
+    padding: 14px;
     text-decoration: none;
 	text-transform: uppercase;
     display: block;
@@ -332,17 +499,15 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	font-weight: 600;
 	font-family: 'Montserrat', Arial sans-serif;
     transition: 0.5s;
-    cursor: pointer;
-	border: 1px solid #111111;
+	border: 1px solid #ffffff;
 	letter-spacing: 1px;
-	border-radius: 5px;
 	text-align: center;
 }
 
 .buttoncol a:hover{
-	color: #ffffff;
-	background-color: #111111;
-	border-color: #111111;
+	color: #111111;
+	background-color: #ffffff;
+	border-color: #ffffff;
 }
 
 /* 3. MAIN CONTENT
@@ -351,31 +516,75 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 /* --- 3.1. Home Area One --- */
 .home_area_one{
 	max-width: 1280px;
-	margin-left: auto;
-	margin-right: auto;
-	margin-bottom: calc(9em - 25px);
-	margin-top: calc(9em - 90px);
+	margin: 85px auto 0;
 	padding: 0 25px;
+	margin-bottom: calc(9em - 45px);
 }
 
 .home_group_one{
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
-	padding-top: 25px;
+	padding-top: 10px;
+}
+
+.home_center{
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	padding-top: 20px;
+	max-width: 800px;
+	margin: 0 auto;
+}
+
+.center_col{
+	flex: 33.33%;
+	width: 33.33%;
+	padding: 20px 10px;
+}
+
+.center_box{
+	text-align: center;
+	max-width: 266px;
+	margin: auto;
+}
+
+.center_box h3{
+	font-family: 'Montserrat' , Arial, sans-serif;
+	font-size: 14px;
+	font-weight: 600;
+	display: block;
+	color: #111111;
+	text-align: left;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	line-height: 1.3em;
+	margin: 0;
+}
+
+.center_box h3::before{
+	font-family: 'uicons-thin-straight';
+	content: "\fa38";
+	font-weight: 400;
+	font-size: 28px;
+	position: relative;
+	top: 9px;
+	padding-right: 10px;
+	color: #d31027;
 }
 
 .home_head{
+	max-width: 700px;
+	margin-left: auto;
+	margin-right: auto;
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 40px;
 	font-weight: 700;
 	letter-spacing: 1px;
-	text-transform: uppercase;
 	text-align: center;
 	display: block;
-	color: #009FFF;
-	padding: 0 10px;
-	line-height: 1.4em;
+	color: #111111;
+	line-height: 1.2em;
 }
 
 .home_info{
@@ -387,38 +596,36 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	letter-spacing: 1px;
 	text-align: center;
 	max-width: 600px;
-	margin: auto;
-	padding-top: 10px;
+	margin: 25px auto 0;
 	line-height: 1.5em;
 }
 
 .home_col{
 	flex: 33.33%;
 	width: 33.33%;
-	padding: 20px 25px;
+	padding: 25px 20px;
 }
 
 .home_box{
-	max-width: 350px;
+	max-width: 500px;
 	position: relative;
-	text-align: center;
-	overflow: hidden;
 	margin: auto;
-	min-height: 150px;
-	transition: 0.5s;
 }
 
-.home_box:hover{
-	transform: translateY(-5px);
+.home_image{
+	position: relative;
 }
 
 .home_image img{
-	vertical-align: middle;
 	width: 100%;
 	height: auto;
-	border-radius: 8px;
-	transition: ease-in-out 3.25s;
-	display: block;
+	transition: 0.5s;
+	border-radius: 10px;
+	box-shadow: 0 20px 70px rgba(38,42,76,.2);
+}
+
+.home_image img:hover{
+	transform: translateY(-5px);
 }
 
 .home_info{
@@ -428,181 +635,184 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding: 3px 0;
 }
 
+.home_name{
+	margin: 0;
+}
+
 .home_name a{
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 16px;
 	display: inline-block;
 	font-weight: 600;
 	color: #111111;
-	text-transform: capitalize;
 	letter-spacing: 1px;
 	text-align: center;
 	line-height: 1.4em;
-	margin-top: 0;
+	padding-top: 9px;
 	text-decoration: none;
 }
 
 /* --- 3.2. Home Area Two --- */
 .home_area_two{
-	position: relative;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	min-height: 400px;
-	height: 100%;
-	background-color: #009FFF;
-	margin-bottom: 4em;
-	padding: 5em 0;
+	max-width: 1280px;
+	margin: 0 auto 0;
+	padding: 0 25px;
+	margin-bottom: calc(9em - 30px);
 }
 
 .home_group_two{
-	position: relative;
-	z-index: 5;
-	max-width: 1100px;
-	margin: auto;
-	padding: 0 25px;
-	width: 100%;
-}
-
-.bg_head{
-	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 40px;
-	font-weight: 700;
-	display: block;
-	color: #ffffff;
-	letter-spacing: 1px;
-	text-align: center;
-	line-height: 1.3em;
-}
-
-.bg_info{
-	max-width: 600px;
-	margin: 0 auto;
-	font-family: 'Roboto' , Arial, sans-serif;
-	font-size: 16px;
-	font-weight: normal;
-	display: block;
-	color: #f2f2f2;
-	letter-spacing: 1px;
-	text-align: center;
-	padding: 10px 10px 0;
-	line-height: 1.5em;
-}
-
-.service_area{
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
-	padding-top: 15px;
+	padding-top: 20px;
 }
 
-.service_col{
-	flex: 33.33%;
-	width: 33.33%;
-	padding: 25px;
+.info_head{
+	flex: 100%;
+	width: 100%;
+	padding: 0 20px;
 }
 
-.service_box{
-	max-width: 300px;
-	margin: auto;
-	padding: 35px 25px;
-	text-align: center;
-	background-color: #ffffff;
-	border: solid 1px #ffffff;
-	transition: 0.5s;
-}
-
-.service_box h3{
-	color: #111111;
+.info_head h2{
 	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 15px;
+	font-size: 40px;
+	font-weight: 700;
+	color: #111111;
+	display: block;
+	text-align: left;
+	letter-spacing: 1px;
+	line-height: 1.2em;
+	max-width: 650px;
+}
+
+.info_head p{
+	font-family: 'Roboto' , Arial, sans-serif;
+	font-size: 16px;
+	font-weight: normal;
+	padding-top: 15px;
+	display: block;
+	color: #696969;
+	letter-spacing: 1px;
+	text-align: left;
+	line-height: 1.5em;
+	max-width: 500px;
+}
+
+.feature_col{
+	flex: 16.66%;
+	width: 16.66%;
+	padding: 30px 20px;
+}
+
+.feature_box{
+	max-width: 215px;
+}
+
+.feature_icon .fi{
+	font-size: 44px;
+	width: 78px;
+	height: 78px;
+	background-color: #ffffff;
+	box-shadow: 0 20px 70px rgba(38,42,76,.2);
+	color: #1488cc;
+	display: block;
+	text-align: center;
+	padding: 14px;
+	margin: -25px auto 0;
+}
+
+.color_icon .fi{
+	box-shadow: none;
+	background-color: #1488cc;
+	color: #ffffff;
+}
+
+.feature_content h3{
+	font-family: 'Montserrat' , Arial, sans-serif;
+	font-size: 14px;
 	font-weight: 600;
 	text-transform: uppercase;
 	display: block;
 	text-align: center;
+	color: #111111;
 	letter-spacing: 1px;
 	line-height: 1.4em;
 }
 
-.service_box .fas,
-.service_box .far,
-.service_box .fab{
-	font-size: 35px;
-	color: #009FFF;
-	text-align: center;
-	display: block;
-}
-
-.service_box:hover{
-	background: transparent;
-}
-
-.service_box:hover h3{
-	color: #ffffff;
-}
-
-.service_box:hover .fas,
-.service_box:hover .far,
-.service_box:hover .fab{
-	color: #ffffff;
-}
-
 /* --- 3.3. Home Area Three --- */
 .home_area_three{
-	max-width: 1280px;
-	margin: 0 auto 9em;
-	padding: 0 25px;
+	min-height: 400px;
+	text-align: center;
+	padding: 6em 25px 9em;
+	background-color: #eeeeee;
+	margin-bottom: 5em;
 }
 
 .home_group_three{
+	max-width: 1280px;
+	position: relative;
+	z-index: 9999;
 	width: 100%;
-	display: flex;
-	flex-wrap: wrap;
+	padding-top: 15px;
 }
 
-.count_col{
-	flex: 25%;
-	width: 25%;
-	padding: 0 25px;
-	border-right: solid 1px #e0e0e0;
+.bg_image{
+	position: relative;
 }
 
-.count_box{
-	max-width: 300px;
+.bg_image img{
+	width: 100%;
+	height: auto;
+	display: block;
+	border-radius: 10px;
+}
+
+.bg_slider{
+	width: 90vw;
+	text-align: center;
+	margin: 25px auto 0;
+}
+
+.bg_slide{
 	margin: auto;
-	padding: 0 25px;
+	padding-right: 20px;
 }
 
-.counter.plus::after{
-	content:'+';
-	font-weight: 500;
+.home_area_three .slick-dots {
+	position: relative;
+	bottom: -30px;
+	display: flex;
+	justify-content: center;
+	margin: 0;
+	padding: 1rem 0;
+	list-style-type: none;
 }
 
-.fourth_border{
-	border-right: none;
-}
-
-.count_box h3{
-	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 16px;
-	font-weight: 600;
+.home_area_three .slick-dots button{
 	display: block;
-	text-align: center;
-	color: #111111;
-	letter-spacing: 1px;
-	text-transform: uppercase;
+	width: 1.3rem;
+	height: 1.3rem;
+	padding: 0;		
+	border: solid 1px #6f6f6f;
+	border-radius: 50%;
+	background-color: transparent;
+	text-indent: -9999px;
 }
 
-.count_box .counter{
-	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 45px;
-	font-weight: 700;
-	display: block;
-	text-align: center;
-	color: #009FFF;
-	letter-spacing: 1px;
+.home_area_three li.slick-active button{
+	background-color: #1488cc;
 }
+
+.home_area_three .slick-dots button:hover{
+	background-color: #1488cc;
+}
+
+.home_area_three .slick-dots li{
+	margin: 0 4px 8px 4px;
+}
+
+/* --- 3.4. Home Area Four --- */
+
 
 /* 4. FOOTER
  ----------- */
@@ -622,7 +832,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .details p{
 	font-family: 'Montserrat', Arial, sans-serif;
 	font-size: 14px;
-	font-weight: normal;
+	font-weight: 500;
 	letter-spacing: 1px;
 	color: #111111;
 	text-align: center;
@@ -643,8 +853,10 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 @media only screen and (max-width: 992px){
 	nav.navbar.bootsnav .navbar-toggle{
         background: transparent;
-        color: #111111;
+        color: #ffffff;
 		font-size: 25px;
+		margin-top: 7px;
+		margin-bottom: 12px;
 	}
 	
 	.head_btn{	
@@ -654,8 +866,18 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 		transform: translateX(-50%);
 	}
 	
-	.navbar-header a.navbar-brand{
-		padding-top: 22px;
+	.head_btn a:hover{
+		background: transparent;
+		border-color: #111111;
+		color: #111111;
+	}
+	
+	.navbar-header > a{
+		margin-top: 14px;
+	}
+	
+	#nav-logo > a{
+		top: 19px;
 	}
 	
 	nav.navbar.bootsnav ul.nav > li > a{
@@ -692,25 +914,38 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 		border-right: none;
 	}
 	
+	.attr-nav > ul > li > a{
+		position: relative;
+		left: 0;
+		padding-top: 21px;
+	}
+	
 	.home_col{
 		flex: 50%;
 		width: 50%;
-	}	
-	
-	.service_col{
-		flex: 50%;
-		width: 50%;
 	}
+
+	.feature_col{
+		flex: 33.33%;
+		width: 33.33%;
+	}	
 }
 
 @media only screen and (max-width: 600px){
-	.header-title__main{
+	.header-title__main,
+	.home_head,
+	.info_head h2{
 		font-size: 30px;
 	}
 	
-	.home_head,
-	.bg_head{
-		font-size: 30px;
+	.info_head{
+		padding-left: 0;
+		padding-right: 0;
+	}
+	
+	.center_col{
+		flex: 100%;
+		width: 100%;
 	}
 	
 	.home_col{
@@ -718,16 +953,30 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 		width: 100%;
 	}
 	
-	.service_col{
-		flex: 100%;
-		width: 100%;
+	.feature_col{
+		flex: 50%;
+		width: 50%;
 	}
 }
 
 @media only screen and (max-width: 420px){
-	.home_col,
-	.service_col{
+	.home_col{
 		padding-left: 0;
 		padding-right: 0;
+	}
+	
+	.header-title__main{
+		font-size: 25px;
+	}
+	
+	.bg_slide{
+		padding-right: 10px;
+	}
+}
+
+@media only screen and (max-width: 385px){
+	.feature_col{
+		flex: 100%;
+		width: 100%;
 	}
 }	
